[package]
name = "rep_lang_concrete_syntax"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.6.4"
pretty = "0.11.3"
quickcheck = "1.0.3"
rep_lang_core = { path = "../rep_lang_core" }

[dev-dependencies]
quickcheck_macros = "1.0.0"
