[package]
name = "rep_lang_core"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "=0.4.6"
hdk = { version = "0.0.136", optional = true }
holochain_serialized_bytes_derive = { version = "0.0.51", optional = true }
quickcheck = "0.9.2"
rand = "0.7"
serde = { version = "1.0", optional = true }

[features]
hc = ["hdk", "holochain_serialized_bytes_derive", "serde"]
