[package]
name = "rep_lang_runtime"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.5.2"
pretty = "0.10.0"
rustyline = "6.3.0"
rep_lang_core = { path = "../rep_lang_core" }
rep_lang_concrete_syntax = { path = "../rep_lang_concrete_syntax" }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[[bin]]
name = "rli"
path = "src/bin/rli.rs"

[[bin]]
name = "rle"
path = "src/bin/rle.rs"
