[package]
name = "rep_lang_runtime"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
combine = "4.5.2"
hdk = { version = "0.0.117", optional = true }
holochain_serialized_bytes_derive = { version = "0.0.51", optional = true }
pretty = "0.10.0"
rustyline = "6.3.0"
serde = { version = "1.0", optional = true }

rep_lang_core = { path = "../rep_lang_core" }
rep_lang_concrete_syntax = { path = "../rep_lang_concrete_syntax" }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[features]
hc = ["hdk", "holochain_serialized_bytes_derive", "serde"]

[[bin]]
name = "rli"
path = "src/bin/rli.rs"

[[bin]]
name = "rle"
path = "src/bin/rle.rs"
