[package]
name = "rep_lang_runtime"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.6.4"
getrandom = { version = "0.2", features = ["js"] }
hdk = { version = "0.0.136", optional = true }
holochain_serialized_bytes_derive = { version = "0.0.51", optional = true }
pretty = "0.11.3"
rustyline = "6.3.0"
serde = { version = "1.0", optional = true }

rep_lang_core = { path = "../rep_lang_core" }
rep_lang_concrete_syntax = { path = "../rep_lang_concrete_syntax" }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[features]
hc = ["hdk", "holochain_serialized_bytes_derive", "serde", "rep_lang_core/hc" ]

[[bin]]
name = "rli"
path = "src/bin/rli.rs"

[[bin]]
name = "rle"
path = "src/bin/rle.rs"
